--- a/week02/main.css
+++ b/week02/main.css
@@ -67,7 +67,7 @@ margin:2%;
 align-items: center;
 cursor: pointer; 
 overflow: hidden;
-background-color: #553c8b;
+background-color: #ffeafe;
 
 }
 ul li img{
