--- a/week02/main.css
+++ b/week02/main.css
@@ -322,7 +322,7 @@ height: 60%;
       }
 body{
     margin: 0px;
-    color: #366ed8;
+    color: #553c8b;
 }
 h1 ,h2, h3{
     text-align: center;
